# job-booster

./: .env.example  .gitignore  ARCHITECTURE.md  Projet.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Modification.md  Projet-Back.md  README.md  pyproject.toml  test_rag_retrieval.py
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/agents/config/: agents.yaml  llm_config.yaml  tasks.yaml
backend/app/api/: __init__.py  generation.py  health.py
backend/app/api/mappers/: __init__.py  generation_mapper.py
backend/app/application/commands/: __init__.py  analyze_job_offer_command.py  generate_application_command.py  generate_content_command.py  rerank_documents_command.py  search_documents_command.py
backend/app/application/dtos/: __init__.py  document_dto.py  generation_result_dto.py  job_analysis_dto.py  job_offer_dto.py  trace_context_dto.py
backend/app/application/orchestrators/: __init__.py  generate_application_orchestrator.py
backend/app/application/use_cases/: __init__.py  analyze_job_offer.py  generate_cover_letter.py  generate_email.py  generate_linkedin.py  rerank_documents.py  search_documents.py  trace_generation.py
backend/app/core/: __init__.py  config.py  container.py  llm_factory.py  logging.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: __init__.py  generated_content.py  job_analysis.py  job_offer.py
backend/app/domain/repositories/: __init__.py  document_repository.py  embedding_service.py  llm_provider.py
backend/app/domain/services/: __init__.py  analyzer_service.py  observability_service.py  reranker_service.py  writer_service.py
backend/app/infrastructure/ai/: __init__.py  crewai_analyzer_adapter.py  llm_provider_adapter.py  reranker_adapter.py
backend/app/infrastructure/config/: __init__.py  (+1 more)
backend/app/models/: __init__.py  requests.py  responses.py
backend/app/services/: chunker.py  embeddings.py  huggingface_embeddings.py  huggingface_reranker.py  langfuse_service.py  local_reranker.py  qdrant_service.py  reranker.py
backend/data/: dossier_competence.md  informations.md
backend/docs/: ARCHITECTURE_REFACTORING.md  ARCHITECTURE_SUMMARY.md  CLEAN_ARCHITECTURE.md  CODE_CLEANUP_SUMMARY.md  LLM_CONFIGURATION.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  embeddings-dimensions.md
backend/scripts/: ingest_data.py
backend/scripts/ingest/: README.md  ingestion_pipeline.py  markdown_processor.py  pdf_processor.py
(+32 files in other folders)
