[tool.poetry]
name = "jobbooster-backend"
version = "0.1.0"
description = "Backend API for JobBooster - AI-powered job application assistant"
authors = ["JobBooster Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
crewai = {extras = ["tools"], version = "^0.95.0"}
qdrant-client = "^1.12.0"
langfuse = "^2.59.0"
sentence-transformers = "^3.3.0"
pymupdf4llm = "^0.0.20"
langchain-text-splitters = "^0.3.0"
python-multipart = "^0.0.20"
openai = "^1.58.0"
google-generativeai = "^0.8.3"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
