[project]
name = "jobbooster-backend"
version = "0.1.0"
description = "Backend API for JobBooster - AI-powered job application assistant"
authors = [{name = "JobBooster Team"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "crewai[tools]>=0.95.0",
    "qdrant-client>=1.12.0",
    "langfuse>=2.59.0",
    "sentence-transformers>=3.3.0",
    "pymupdf4llm>=0.0.20",
    "langchain-text-splitters>=0.3.0",
    "python-multipart>=0.0.20",
    "openai>=1.58.0",
    "google-generativeai>=0.8.3",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "flagembedding>=1.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
